tests/tests/neg/error_messages/annot_check/invalid_detach_trait_impl00.rs
#![allow(unused)]

#[flux::specs {

    impl Gromp for usize {
      fn gromp() -> usize[0];
    }

}]
const _: () = ();
